--- a/src/app/sections/discover/discover.component.html
+++ b/src/app/sections/discover/discover.component.html
@@ -37,12 +37,36 @@
         <p>Conoce a fondo a los héroes, sus habilidades únicas y los objetos más decisivos del juego. Una guía esencial
           para entender el complejo y estratégico mundo de Dota 2.</p>
       </div>
+       <div class="wiki-subsections d-flex flex-wrap gap-3 justify-content-center mt-4">
+        <button class="btn btn-circle-sm" title="abilities">
+          <img src="assets/icons/abilities.png" alt="abilities">
+        </button>
+
+        <button class="btn btn-circle-sm" title="heores">
+          <img src="assets/icons/heores.png" alt="heores">
+        </button>
+
+        <button class="btn btn-circle-sm" title="items">
+          <img src="assets/icons/items.png" alt="items">
+        </button>
+
+      </div>
       }
       @case ('csgo') {
       <div class="wiki-content">
         <h3 class="text-warning">CS:GO</h3>
         <p>Explora los mapas, armas y versiones que han definido a Counter-Strike como el shooter táctico por
           excelencia. Aquí descubrirás lo que necesitas para convertirte en un experto del <i>gameplay</i> base.</p>
+      </div>
+      <div class="wiki-subsections d-flex flex-wrap gap-3 justify-content-center mt-4">
+
+        <button class="btn btn-circle-sm" title="maps">
+          <img src="assets/icons/maps.png" alt="maps">
+        </button>
+
+        <button class="btn btn-circle-sm" title="weapons">
+          <img src="assets/icons/weapons.png" alt="weapons">
+        </button>
       </div>
       }
       @case ('lol') {
