--- a/src/app/sections/discover/discover.component.html
+++ b/src/app/sections/discover/discover.component.html
@@ -37,20 +37,70 @@
         <p>Conoce a fondo a los héroes, sus habilidades únicas y los objetos más decisivos del juego. Una guía esencial
           para entender el complejo y estratégico mundo de Dota 2.</p>
       </div>
-       <div class="wiki-subsections d-flex flex-wrap gap-3 justify-content-center mt-4">
-        <button class="btn btn-circle-sm" title="abilities">
+      <div class="wiki-subsections d-flex flex-wrap gap-3 justify-content-center mt-4">
+        <button  (click)="getDota2Abilities()" class="btn btn-circle-sm" title="abilities">
           <img src="assets/icons/abilities.png" alt="abilities">
         </button>
 
-        <button class="btn btn-circle-sm" title="heores">
+        <button  (click)="getDota2heroes()" class="btn btn-circle-sm" title="heores">
           <img src="assets/icons/heores.png" alt="heores">
         </button>
 
-        <button class="btn btn-circle-sm" title="items">
+        <button  (click)="getDota2items()" class="btn btn-circle-sm" title="items">
           <img src="assets/icons/items.png" alt="items">
         </button>
 
       </div>
+
+ @if (currentView === 'heroes') {
+      <div class="row g-4 justify-content-center mt-4">
+        @for (p of dotaheores; track $index) {
+        <div class="col-12 col-md-6 col-lg-4 d-flex">
+          <div
+            class="recommended-card bg-dark border border-secondary p-4 rounded text-light shadow h-100 w-100 mx-auto text-center">
+            <h5 class="mb-3 text-info">
+              <i class="bi bi-geo-alt-fill me-2"></i>{{ p.name }}
+            </h5>
+            <img [src]="p.image_url" alt="Mapa de {{ p.name }}" class="img-fluid rounded mb-2 shadow-sm mx-auto d-block"
+              style="max-width: 180px; height: auto;">
+          </div>
+        </div>
+        }
+      </div>
+      }
+      @if (currentView === 'items') {
+      <div class="row g-4 justify-content-center mt-4">
+        @for (p of dotaItems; track $index) {
+        <div class="col-12 col-md-6 col-lg-4 d-flex">
+          <div
+            class="recommended-card bg-dark border border-secondary p-4 rounded text-light shadow h-100 w-100 mx-auto text-center">
+            <h5 class="mb-3 text-info">
+              <i class="bi bi-geo-alt-fill me-2"></i>{{ p.name }}
+            </h5>
+            <img [src]="p.image_url" alt="Mapa de {{ p.name }}" class="img-fluid rounded mb-2 shadow-sm mx-auto d-block"
+              style="max-width: 180px; height: auto;">
+          </div>
+        </div>
+        }
+      </div>
+      }
+      @if (currentView === 'abilities') {
+      <div class="row g-4 justify-content-center mt-4">
+        @for (p of dotaAbilities; track $index) {
+        <div class="col-12 col-md-6 col-lg-4 d-flex">
+          <div
+            class="recommended-card bg-dark border border-secondary p-4 rounded text-light shadow h-100 w-100 mx-auto text-center">
+            <h5 class="mb-3 text-info">
+              <i class="bi bi-geo-alt-fill me-2"></i>{{ p.name }}
+            </h5>
+            <img [src]="p.image_url" alt="Mapa de {{ p.name }}" class="img-fluid rounded mb-2 shadow-sm mx-auto d-block"
+              style="max-width: 180px; height: auto;">
+          </div>
+        </div>
+        }
+      </div>
+      }
+
       }
       @case ('csgo') {
       <div class="wiki-content">
@@ -60,15 +110,50 @@
       </div>
       <div class="wiki-subsections d-flex flex-wrap gap-3 justify-content-center mt-4">
 
-        <button class="btn btn-circle-sm" title="maps">
+        <button (click)="getCSGOmaps()" class="btn btn-circle-sm" title="maps">
           <img src="assets/icons/maps.png" alt="maps">
         </button>
 
-        <button class="btn btn-circle-sm" title="weapons">
+        <button (click)="getCSGOweapons()"  class="btn btn-circle-sm" title="weapons">
           <img src="assets/icons/weapons.png" alt="weapons">
         </button>
       </div>
+
+      @if (currentView === 'maps') {
+      <div class="row g-4 justify-content-center mt-4">
+        @for (p of maps; track $index) {
+        <div class="col-12 col-md-6 col-lg-4 d-flex">
+          <div
+            class="recommended-card bg-dark border border-secondary p-4 rounded text-light shadow h-100 w-100 mx-auto text-center">
+            <h5 class="mb-3 text-info">
+              <i class="bi bi-geo-alt-fill me-2"></i>{{ p.name }}
+            </h5>
+            <img [src]="p.image_url" alt="Mapa de {{ p.name }}" class="img-fluid rounded mb-2 shadow-sm mx-auto d-block"
+              style="max-width: 180px; height: auto;">
+          </div>
+        </div>
+        }
+      </div>
       }
+
+ @if (currentView === 'weapons') {
+      <div class="row g-4 justify-content-center mt-4">
+        @for (w of weapons; track $index) {
+        <div class="col-12 col-md-6 col-lg-4 d-flex">
+          <div
+            class="recommended-card bg-dark border border-secondary p-4 rounded text-light shadow h-100 w-100 mx-auto text-center">
+            <h5 class="mb-3 text-info">
+              <i class="bi bi-crosshair me-2"></i>{{ w.name }}
+            </h5>
+            <img [src]="w.image_url" alt="Arma: {{ w.name }}" class="img-fluid rounded mb-2 shadow-sm mx-auto d-block"
+              style="max-width: 180px; height: auto;">
+          </div>
+        </div>
+        }
+      </div>
+    }
+  }
+
       @case ('lol') {
       <div class="wiki-content">
         <h3 class="text-warning">League of Legends</h3>
